# ESP-encryption-test

./: .gitignore  CMakeLists.txt  capture_core.sh  protocol_client.py  sdkconfig  sdkconfig.old
components/encryption/: CMakeLists.txt  crc16.c  dh.c  dh.h  enc.c  enc.h  encryption.h  fini.c  fini.h  hex.c  hex.h  init.c  init.h  memzero.h  prov.c  prov.h  types.h
components/io_helpers/: CMakeLists.txt  io_helpers.c
components/io_helpers/include/: io_helpers.h
components/mbedtls_abstraction/: aes.h  crc_wrap.c  crc_wrap.h  ecdh.c  mbedtls_abstraction.h  sha256.h
components/mbedtls_abstractrion/: CMakeLists.txt  aes.c  crc_wrap.c  crc_wrap.h  ecdh.c  ecdh.h  hkdf.h  sha256.c
components/tests/: CMakeLists.txt  tests.c
components/tests/include/: tests.h
main/: CMakeLists.txt  esp-encryption-test.c
main/encryption/: crc16.h  dh.c  dh.h  enc.c  enc.h  fini.c  init.c  memzero.c  prov.c  prov.h  types.h
main/io_helpers/include/: io_helpers.h
main/mbedtls_abstractrion/: aes.c  aes.h  crc_wrap.c  crc_wrap.h  ecdh.c  ecdh.h  hkdf.c  hkdf.h  sha256.c  sha256.h
